product summary added to product page

--- a/src/main/resources/static/styles/product.css
+++ b/src/main/resources/static/styles/product.css
@@ -1124,8 +1124,7 @@ section {
 }
 
 .product_text p {
-    font-size: 14px;
-    font-weight: 300;
+    font-size: 16px;
     color: #969696;
     line-height: 1.75;
 }
@@ -2122,4 +2121,12 @@ section {
 
 .review_star_numbers {
     padding-left: 15px;
+}
+
+.product_summary_title {
+    float: left;
+    margin-right: 5px;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 18px;
 }
