--- a/src/main/resources/static/styles/product.css
+++ b/src/main/resources/static/styles/product.css
@@ -2116,7 +2116,11 @@ section {
 }
 
 .review_star {
-    color:#fbd600;
+    color: #fbd600;
+}
+
+.summary_star {
+    color: #4a4a4a;
 }
 
 .review_star_numbers {
