--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -67,53 +67,51 @@
     </div>
 </div>
 
-<span th:unless="${#lists.isEmpty(allCategories)}">
-<!-- Sort orders -->
-<div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
-    <div class="products_dropdown product_dropdown_sorting">
-        <div class="isotope_sorting_text"><span>Sort</span><i
-                class="fa fa-caret-down" aria-hidden="true"></i></div>
-        <ul>
-            <li class="item_sorting_btn"
-                data-isotope-option='{ "sortBy": "original-order" }'>ID
-            </li>
-            <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "name" }'>Name</li>
-            <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "itemNum" }'>
-                Total Product
-            </li>
-            <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "subcategory" }'>
-                Total Subcategory
-            </li>
-        </ul>
-    </div>
-</div>
-
-<br>
-
-<div>
-    <div class="row order - row ">
-
-        <div class="col-lg-3 col-md-3 col-xs-6">
-            <div class="profile-order-title">ID</div>
-        </div>
-
-        <div class="col-lg-3 col-md-3 col-xs-6">
-            <div class="profile-order-title">Name</div>
-        </div>
-
-        <div class="col-lg-3 col-md-3 col-xs-6">
-            <div class="profile-order-title">Total Product</div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-xs-6">
-            <div class="profile-order-title">Total Subcategory</div>
+<span th:if="${categoryPage.totalPages > 0}">
+    <!-- Sort orders -->
+    <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
+        <div class="products_dropdown product_dropdown_sorting">
+            <div class="isotope_sorting_text"><span>Sort</span><i
+                    class="fa fa-caret-down" aria-hidden="true"></i></div>
+            <ul>
+                <li class="item_sorting_btn"
+                    data-isotope-option='{ "sortBy": "original-order" }'>ID
+                </li>
+                <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "name" }'>Name</li>
+                <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "itemNum" }'>
+                    Total Product
+                </li>
+                <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "subcategory" }'>
+                    Total Subcategory
+                </li>
+            </ul>
         </div>
     </div>
+
     <br>
-    <div class="container">
-        <div class="orderDetailBox">
 
-            <div th:if="${allCategories != null}">
-                <tr th:each="category: ${allCategories}">
+    <div>
+        <div class="row order - row ">
+
+            <div class="col-lg-3 col-md-3 col-xs-6">
+                <div class="profile-order-title">ID</div>
+            </div>
+
+            <div class="col-lg-3 col-md-3 col-xs-6">
+                <div class="profile-order-title">Name</div>
+            </div>
+
+            <div class="col-lg-3 col-md-3 col-xs-6">
+                <div class="profile-order-title">Total Product</div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-xs-6">
+                <div class="profile-order-title">Total Subcategory</div>
+            </div>
+        </div>
+        <br>
+        <div class="container">
+            <div class="orderDetailBox">
+                <tr th:each="category: ${categoryPage.content}">
 
                     <!-- User -->
                     <div class="product">
@@ -150,29 +148,67 @@
 
                 </tr>
             </div>
-            <div th:if="${allCategories == null}">
-                <div class="warning-text" style="display: none">There are no categories.</div>
+        </div>
+    </div>
+
+    <div class="row page_nav_row">
+        <div class="col">
+            <div class="page_nav">
+                <ul class="d-flex flex-row align-items-start justify-content-center">
+                    <!-- Previous button -->
+                    <li th:style="${currentPage == 1} ? 'display:none'">
+                        <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${currentPage - 1})}"
+                           aria-label="Previous" title="Previous Page" rel="tooltip">
+                            <i class="pagination_arrow fa fa-angle-left"></i>
+                        </a>
+                    </li>
+
+                    <!-- First page -->
+                    <li th:if="${categoryPage.totalPages > 0}"
+                        th:class="${currentPage == 1} ? 'active'">
+                        <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1})}"
+                           th:title="${'Page '+ 1}"
+                           th:text="${1}" style="color: #fbaa1d;">
+                        </a>
+                    </li>
+
+                    <li th:if="${currentPage - 3 > 1}" class="pagination_dots">...</li>
+
+                    <!-- Pages -->
+                    <li th:if="${categoryPage.totalPages > 2}"
+                        th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
+                                        , categoryPage.totalPages > 2 + currentPage ? currentPage + 2 : categoryPage.totalPages - 1, 1)}"
+                        th:class="${currentPage == i} ? 'active'">
+                        <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${i})}"
+                           th:text="${i}" th:title="${'Page '+ i}" style="color: #fbaa1d;"></a>
+                    </li>
+
+                    <li th:if="${currentPage + 3 < categoryPage.totalPages}" class="pagination_dots">...</li>
+
+                    <!-- Last page -->
+                    <li th:if="${categoryPage.totalPages > 1}"
+                        th:class="${currentPage == categoryPage.totalPages} ? 'active'">
+                        <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${categoryPage.totalPages})}"
+                           th:text="${categoryPage.totalPages}" style="color: #fbaa1d;"
+                           th:title="${'Page '+ categoryPage.totalPages}">
+                        </a>
+                    </li>
+
+                    <!-- Next button -->
+                    <li th:style="${currentPage == categoryPage.totalPages} ? 'display:none'">
+                        <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${currentPage + 1})}"
+                           aria-label="Next" title="Next Page" rel="tooltip">
+                            <i class="pagination_arrow fa fa-angle-right"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
-</div>
-
-<div class="row page_nav_row">
-    <div class="col">
-        <div class="page_nav">
-            <ul class="d-flex flex-row align-items-start justify-content-center">
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#" style="color: #fbaa1d;">2</a></li>
-                <li><a href="#" style="color: #fbaa1d;">3</a></li>
-                <li><a href="#" style="color: #fbaa1d;">4</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
 </span>
 
-<!-- No categories -->
-<span th:if="${#lists.isEmpty(allCategories)}">
+<!-- No category -->
+<span th:unless="${categoryPage.totalPages > 0}">
     <div class="warning-text">There are no categories.</div>
 </span>
 
